--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+ 
   "dependencies": {
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
